# demographix

./: .gitignore  .overmind.env  CONTRIBUTING.md  Procfile  README.md  package-lock.json  package.json
api/: .envrc  .gitignore  Procfile  README.md  app.py  crud.py  demographix.sql  flask.service  gpt.py  gunicorn.conf.py  model.py  nginx.conf  pyproject.toml  requirements.txt  seed.py  seed_movies.py  server.py  tests.py
api/data/: 2022.json  __init__.py  base.py  cast.py  countries.json  credits.json  credits.py  data.json  ethnicities.json  ethnicity.py  gpt.py  model.py  movie_details.json  movie_repository.py  movies.json  movies.py  nominations.py  palm.py  persons.json  persons.py  race.json  regions.json  types.py
api/data/alt_country/: alt_country_model.py
api/data/alt_ethnicities/: alt_ethnicity_model.py
api/data/awards/: award_dto.py  award_model.py
api/data/cast_ethnicities/: cast_ethnicity_model.py
api/data/cast_ethnicity_source_links/: cast_ethnicity_source_link_model.py
api/data/cast_members/: also_known_as_model.py  alt_cast_member_model.py  cast_member_dto.py  cast_member_model.py  cast_member_repository.py
api/data/countries/: alt_country_model.py  country_model.py
api/data/credits/: credit_model.py  credit_repository.py
api/data/ethnicities/: alt_ethnicity_model.py  ethnicity_model.py
api/data/events/: event_dto.py  event_model.py  event_repository.py
api/data/genders/: gender_model.py
api/data/genres/: genre_dto.py  genre_model.py  genre_repository.py
api/data/media_genres/: media_genre_model.py
api/data/movies/: movie_dto.py  movie_model.py  movie_repository.py
api/data/nominations/: dto.py  model.py  nomination_dto.py  nomination_model.py  nomination_repository.py  repository.py
api/data/races/: race_model.py
api/data/regions/: region_model.py
api/data/source_links/: source_link_model.py
api/data/sources/: source_model.py
api/data/sub_regions/: sub_region_model.py
api/data/subregions/: subregion_model.py
api/migrations/: env.py
api/migrations/versions/: 0508fe9ffe3d_.py  08b13cbdae34_.py  308408a8a8ef_.py  6edd3cbc34c8_.py  9af4fe928bee_.py  9faf7dda1632_initial_schema.py  b14a0db2f837_.py  b95ceb377a3a_.py  (+6 more)
api/routes/: admin.py  demographics.py  index.py  movies.py  nominations.py
api/scripts/: reload_db.sh  reload_env.sh  run  seed.py  seed_db.sh
api/services/: demographics_service.py  ethnicity.py  logging_service.py  movie_nomination_service.py  movie_service.py  movies.py  nomination_service.py  tmdb_service.py
api/templates/: base.html  page.html
api/tests/: tests.py
(+131 files in other folders)
