[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mithin Thomas <mithingthomas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
Flask = "^3.0.2"
Flask-Migrate = "^4.0.7"
SQLAlchemy = "^2.0.28"
g4f = { extras = ["openai"], version = "^0.2.6.2" }
google-generativeai = "^0.4.1"
psycopg2 = "^2.9.9"
beautifulsoup4 = "^4.12.3"
gunicorn = "^23.0.0"
flask-cors = "^5.0.1"
types-requests = "^2.32.0.20250306"
types-flask-migrate = "^4.1.0.20250112"
types-flask-cors = "^5.0.0.20240902"
sqlalchemy-stubs = "^0.4"
mypy = "^1.15.0"


[tool.poetry.group.g4f.dependencies]
curl-cffi = "^0.6.2"
platformdirs = "^4.2.0"
aiohttp-socks = "^0.8.4"
browser-cookie3 = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
